Created a project directory service to find the root directory. Swapped main form and pdf gen service to using that new service.

--- a/Templates/HealthAndWellness/AssessmentTemplate.html
+++ b/Templates/HealthAndWellness/AssessmentTemplate.html
@@ -12,7 +12,7 @@
         <div class="title">
           Oral Health Risk
           <br>
-          Assessment Toolz
+          Assessment Tool
         </div>
         <div class="graphic">
           <img src="images/ODHSgraphic.PNG" alt="ODHS Graphic">
