--- a/Templates/HealthAndWellness/AssessmentTemplate.html
+++ b/Templates/HealthAndWellness/AssessmentTemplate.html
@@ -10,7 +10,7 @@
       <!-- Header with Title and Graphic -->
       <header>
         <div class="title">
-          Oral Health Risk
+          Oral Health Riskz
           <br>
           Assessment Tool
         </div>
