--- a/Templates/HealthAndWellness/TestRazorDataAssessment.cshtml
+++ b/Templates/HealthAndWellness/TestRazorDataAssessment.cshtml
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Assessment Report</title>
+    <title>Userz Assessment Report</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="globalStyles.css" rel="stylesheet">
 </head>
