Fixed watcher service to close when back to selection is clicked

--- a/Templates/HealthAndWellness/RNTaskDelegTemplate.html
+++ b/Templates/HealthAndWellness/RNTaskDelegTemplate.html
@@ -299,7 +299,7 @@
     <div class="container">
         <header class="clearfix">
             <div class="title">
-                Registeredzs Nursing<br>
+                Registereds Nursings<br>
                 Task Delegation<br>
                 and Assignments
             </div>
