--- a/Templates/Hotline/TesterTemplate.cshtml
+++ b/Templates/Hotline/TesterTemplate.cshtml
@@ -1,11 +1,11 @@
-@model iTextDesignerWithGUI.Models.HotlineAssessmentModels.HotlineAssessmentInstance
+@model iTextDesignerWithGUI.Models.TesterModels.TesterInstance
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HotlineAssessment</title>
+    <title>Tester</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="globalStyles.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
         <!-- Header with Title -->
         <header class="my-4">
-            <h1 class="text-center">HotlineAssessment Setup Instructions</h1>
+            <h1 class="text-center">Tester Setup Instructions</h1>
         </header>
 
         <!-- Setup Instructions -->
@@ -26,7 +26,7 @@
                     <p>Close this application and find the ReferenceDataJsons folder for your assessment type:</p>
                     
                     <p>Your JSON file will be located at:</p>
-                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\ReferenceDataJsons\HealthAndWellness\HotlineAssessmentData.json</code>
+                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\ReferenceDataJsons\Hotline\TesterData.json</code>
                     
                     <p>Create and add your JSON here. You need to have an array of your initial JSON structure with at least 3 entries to work with the GUI.</p>
                 </div>
@@ -40,7 +40,7 @@
                     <p>Next, go to the Models Folder for your assessment type:</p>
                     
                     <p>Your model instance file will be located at:</p>
-                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\Models\HealthAndWellness\HotlineAssessmentModels\HotlineAssessmentInstance.cs</code>
+                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\Models\Hotline\TesterModels\TesterInstance.cs</code>
                     
                     <p>Using ChatGPT, you can quickly create a model by copying in one of your JSON entries and asking for a C# model to be built.</p>
                 </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="card-body">
                     <p>Find the HTML template that was generated at:</p>
-                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\Templates\HealthAndWellness\HotlineAssessmentTemplate.cshtml</code>
+                    <code class="d-block bg-light p-2 mb-3">C:\Users\samwo\OneDrive\Desktop\Python Code\ITextGUIProject2_22\Templates\Hotline\TesterTemplate.cshtml</code>
                     
                     <p>Then, simply remove the old models references like <code>@@@@Model.User.Name</code>, while keeping the @@@@model declaration on the 1st line of code. This line of code passes your entire data set into the template.</p>
                 </div>
