Fixed race condition on generate pdf and watcher service.

--- a/Templates/HealthAndWellness/AssessmentTemplate.html
+++ b/Templates/HealthAndWellness/AssessmentTemplate.html
@@ -10,7 +10,7 @@
       <!-- Header with Title and Graphic -->
       <header>
         <div class="title">
-          Oral Health Risk
+          Oralz Health Risk
           <br>
           Assessment Tool
         </div>
